--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Bootstrap css -->
+		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+		<link rel="stylesheet" href="{% static 'css/style.css' %}">
+		<link rel="stylesheet" href="{% static 'font/bootstrap-icons.css' %}">
 		<title>{% block title %}{% endblock %}</title>
 	</head>
 	<body>
 		{% block content %}{% endblock %}
 		<!-- Bootstrap js -->
+		<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 	</body>
 </html>
