--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,20 @@
+.bg-light {
+	background-color: rgba(247, 197, 204, 1) !important;
+}
+
+.navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link {
+	color: rgba(204, 49, 61, 1);
+}
+
+.navbar-light .navbar-nav .nav-link {
+	color: rgba(204, 49, 61, 0.55);
+}
+
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+	color: rgba(204, 49, 61, .9);
+}
+
+.card-title, .card-text {
+	color: rgba(204, 49, 61, 1);
+}
 
