--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,24 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+{% load static %}
+{% url 'person_app:login' as login %}
+{% url 'person_app:register' as register %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar w/ text</a>
+		<a class="navbar-brand" href="{{ login }}"><img src="{% static 'img/OnlineMarketLogo.png' %}" alt="Logo" width="100" height="50"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+					<a class="nav-link {% if request.path == login %}active{% endif %}" aria-current="page" href="{{ login }}">Iniciar Sesión</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+					<a class="nav-link {% if request.path == register %}active{% endif %}" href="{{ register }}">Registrarse</a>
         </li>
       </ul>
-      <span class="navbar-text">
-        Navbar text with an inline element
-      </span>
     </div>
   </div>
 </nav>
