Agregando aplicación para productos y validaciones de seller

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% include 'includes/navbar.html' %}
+{% include 'includes/navbar_log.html' %}
 
 <h1>Hola {{ user }}</h1>
 <ul>
