--- a/templates/person/register.html
+++ b/templates/person/register.html
@@ -46,6 +46,13 @@
 							{{ form.phone | add_class:'form-control' }}
 						</div>
 					</div>
+					<div class="mb-3 row">
+						<label for="" class="col-md-2 col-sm-4 col-form-label card-text">Tipo de Usuario</label>
+						<div class="col-md-10 col-sm-8">
+							{{ form.user_type | add_class:'form-select' }}
+						</div>
+					</div>
+
 					<button type="submit" class="btn btn-danger">Registrarse</button>
 				</form>
 			</p>
