--- a/templates/product/register.html
+++ b/templates/product/register.html
@@ -28,6 +28,12 @@
 							{{ form.description | add_class:'form-control' }}
 						</div>
 					</div>
+					<div class="mb-3 row">
+						<label for="price" class="col-md-2 col-sm-4 col-form-label card-text">Precio del producto</label>
+						<div class="col-md-10 col-sm-8">
+							{{ form.price | add_class:'form-control' }}
+						</div>
+					</div>
 					<button type="submit" class="btn btn-danger">Registrar producto</button>
 				</form>
 			</p>
