--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% url 'person_app:login' as login %}
 {% url 'person_app:register' as register %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
   <div class="container-fluid">
 		<a class="navbar-brand" href="{{ login }}"><img src="{% static 'img/OnlineMarketLogo.png' %}" alt="Logo" width="100" height="50"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
